# ti4-map-generator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  draw_galaxy.py  drawgalaxy.py  install_site.sh  map_layouts.json  planets.csv  standard_hex.json  test_mapgen.sh  ti4-map-generator-cgi.py  ti4-map-generator.cpp  ti4mapgenwrapper.py  tiles.json
site/: index.html
site/cgi-bin/: draw_galaxy.py  ti4-map-generator-cgi.py  tiles.json
site/res/: style.css
site/res/layouts/: CaptBrownShoes4p.json  Good_Sauces_no_trade_good_flat_map.json  kazadoom_notch.json  narrow.json  narrow3p.json  narrower.json  small_hex.json  spiral.json  squishy.json  standard_hex.json  surge.json  the_approaching.json  triangle.json  warp_zone.json  warp_zone4p.json
ti4site/: manage.py
ti4site/mapgen/: apps.py  forms.py  urls.py  views.py
ti4site/mapgen/mapgenwrapper/: ti4mapgenwrapper.py
ti4site/mapgen/templates/mapgen/: index.html
ti4site/ti4site/: asgi.py  settings.py  urls.py  wsgi.py
